--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
 
         <title>Clean Water Game Page</title>
+        <link rel="stylesheet" href="css/global.css"> 
         <link rel="stylesheet" href="css/homepage-style-sheet.css">
         <script src="https://kit.fontawesome.com/3dd4d3e2df.js" crossorigin="anonymous"></script>
         
