--- a/community-page.html
+++ b/community-page.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <hmtl>
     <head>
+        <style>
+            background-image:URL()
+        </style>
 
     </head>
 
     <body>
-        
+
     </body>
+    
 </hmtl>
