--- a/log-in-page.html
+++ b/log-in-page.html
@@ -2,20 +2,27 @@
 <html>
     <head>
         <title>Clean Water Game Page</title>
-        <link rel="stylesheet" href="css/waterglobal.css">
+        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/login-sign-in-page.css">
         <script src="https://kit.fontawesome.com/3dd4d3e2df.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <main>
-            <header>
+            <div class="page">
+                <header>
 
-            </header>
-            <div class="background-log-in">
-                <h1>Log In</h1>
-            </div>
-            <div class="Username">
-                <h2>Username</h2>
-            
+                </header>
+                <div class="background-log-in">
+                    <h1>Log In</h1>
+                    <div class="user-input">
+                        <div><i class="fas fa-user-circle"></i></div>
+                        <div><input type="text"></div>
+                    </div>
+                    <div class="user-password">
+                        <div><i class="fas fa-lock"></i></div>
+                        <div><input type="text"></div>
+                    </div>
+                </div>
             </div>
         </main>
         <nav>
