--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/waterglobal.css">
-       
+        <title>Clean Water Game Page</title>
+        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/login-sign-in-page.css">
+        <script src="https://kit.fontawesome.com/3dd4d3e2df.js" crossorigin="anonymous"></script>
     </head>
-
     <body>
+        <main>
+            <div class="page">
+                <header>
 
+                </header>
+                <div class="background-log-in">
+                    <h1>Sign In</h1>
+                    <h2>WELCOME HERE!</h2>
+                    <div class="user-input">
+                        <div><i class="fas fa-user-circle"></i></div>
+                        <div><input type="text"></div>
+                    </div>
+                    <div class="user-password">
+                        <div><i class="fas fa-lock"></i></div>
+                        <div><input type="text"></div>
+                    </div>
+                    <div class="log-in-button">
+                        <h3>SIGN UP</h3>
+                    </div>
+                    <div class="line">
+                        <hr>
 
+                    </div>
+                    <div class="forgot-password">
+                        <h3>FORGOT YOUR PASSWORD? <a href="#">CLICK HERE</a></h3>
+                    </div>
+                    
+                </div>
+            </div>
+        </main>
+        <nav>
+            <ul>
+             <li><a href="#"><i class="fas fa-home"></i> Homepage</a></li>
+             <li><a href="#"><i class="fas fa-gamepad"></i> Game</a></li>
+             <li><a href="#"><i class="fas fa-award"></i> Leader Board</a></li>
+             <li><a href="#"><i class="far fa-envelope"></i> Community</a></li>
+             <li><a href="#"><i class="fas fa-info-circle"></i> About us</a></li>
+             <li><a href="#"><i class="fas fa-book-open"></i> Resources</a></li>
+             <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
