--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <main>
            <div class="page">
                 <header>
-                     <h1>Do You Know the Harm of Water Pollution?</h1>
+                     <h1 style="background-color: #f9f7f3;">Do You Know the Harm of Water Pollution?</h1>
                 </header>
                  <div class="paragraph">
-                     <p>Our rivers, reservoirs, lakes, and seas are drowning in chemicals, waste, plastic, and other pollutants. Here’s why―Water pollution kills. In fact, it caused 1.8 million deaths in 2015, according to a study published in The Lancet. Waterborne pathogens, in the form of disease-causing bacteria and viruses from human and animal waste, are a major cause of illness from contaminated drinking water. Thousands of people across the United States are sickened every year by Legionnaires’ disease (a severe form of pneumonia contracted from water sources like cooling towers and piped water), with cases cropping up from California’s Disneyland to Manhattan’s Upper East Side</p>
+                     <p>Our rivers, reservoirs, lakes, and seas are drowning in chemicals, waste, plastic, and other pollutants. Here's why―Water pollution kills. In fact, it caused 1.8 million deaths in 2015, according to a study published in The Lancet. Waterborne pathogens, in the form of disease-causing bacteria and viruses from human and animal waste, are a major cause of illness from contaminated drinking water. Thousands of people across the United States are sickened every year by Legionnaires' disease (a severe form of pneumonia contracted from water sources like cooling towers and piped water), with cases cropping up from California’s Disneyland to Manhattan's Upper East Side</p>
                 </div>
                 <div class="ending">
                     <p>Lets do something to save water!</p>
@@ -31,6 +31,7 @@
                 <li><a href="#"><i class="fas fa-award"></i> Leader Board</a></li>
                 <li><a href="#"><i class="far fa-envelope"></i> Community</a></li>
                 <li><a href="#"><i class="fas fa-info-circle"></i> About us</a></li>
+                <li><a href="#"><i class="fas fa-book-open"></i> Resources</a></li>
                 <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
