--- a/about-us.html
+++ b/about-us.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
-    <style>
-        h1 {
-            text-align: center;
-        }
 
-        h2 {
-            text-align: justify;
-        }
-    </style>
 
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/about-us.css">
+
+    <style>
+        body {
+            background-image: url(Images/about-us-background.jpg);
+        }
+
+    </style>
 
     <script src="https://kit.fontawesome.com/3dd4d3e2df.js" crossorigin="anonymous"></script>
 
@@ -23,7 +22,8 @@
 
     <main>
 
-        <!--delete this when done -->
+        <div class="page">
+
         <div>
             <h1><i class="fas fa-hand-holding-water"></i>About us</h1><br>
         </div>
@@ -56,7 +56,7 @@
             </table>
 
         </section>
-
+    </div>
     </main>
 
     <nav>
