--- a/gamepage.html
+++ b/gamepage.html
@@ -5,7 +5,7 @@
 <head>
     <title>Clean Water Game Page</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/resources-style.css">
+    <link rel="stylesheet" href="css/gamepage-style-sheet.css">
     <script src="https://kit.fontawesome.com/3dd4d3e2df.js" crossorigin="anonymous"></script>
 
 </head>
