--- a/resources.html
+++ b/resources.html
@@ -18,10 +18,10 @@
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i> Homepage</a></li>
                 <li><a href="gamepage.html"><i class="fas fa-gamepad"></i> Game</a></li>
-                <li><a href="#"><i class="fas fa-award"></i> Leader Board</a></li>
+                <li><a href="leaderboard.html"><i class="fas fa-award"></i> Leader Board</a></li>
                 <li><a href="community-page.html"><i class="far fa-envelope"></i> Community</a></li>
-                <li><a href="#"><i class="fas fa-info-circle"></i> About us</a></li>
-                <li><a href="#"><i class="fas fa-book-open"></i> Resources</a></li>
+                <li><a href="about-us.html"><i class="fas fa-info-circle"></i> About us</a></li>
+                <li><a href="resources.html"><i class="fas fa-book-open"></i> Resources</a></li>
                 <li><a href="log-in-page.html"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
