--- a/about-us.html
+++ b/about-us.html
@@ -11,6 +11,7 @@
         body {
             background-image: url(Images/about-us-background.jpg);
         }
+    
 
     </style>
 
@@ -30,6 +31,10 @@
 
         <div>
             <h2 class="table-h">Website/Game creators:</h2><br>
+        </div>
+        <div>
+            <h3>Our game, Saving Water, is a topical game about global access to clean water and what you can do to help. In our game you direct a bar of soap to destroy the bacteria and progress through levels. Every 5 points you collect you are given a fact about the global water crisis and how it affects millions around the world. With the function of the timer you are able to time how fast you reach the end goal of 30 points and try and make your mark on our leaderboard.
+            </h3><br>
         </div>
 
         <section>
@@ -62,27 +67,17 @@
     <nav>
 
         <ul>
-            <li><a href="#"><i class="fas fa-home"></i> Homepage</a></li>
-            <li><a href="#"><i class="fas fa-gamepad"></i> Game</a></li>
-            <li><a href="#"><i class="fas fa-award"></i> Leader Board</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> Homepage</a></li>
+            <li><a href="gamepage.html"><i class="fas fa-gamepad"></i> Game</a></li>
+            <li><a href="leaderboard.html"><i class="fas fa-award"></i> Leader Board</a></li>
             <li><a href="#"><i class="far fa-envelope"></i> Community</a></li>
-            <li><a href="#"><i class="fas fa-info-circle"></i> About us</a></li>
-            <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
+            <li><a href="about-us.html"><i class="fas fa-info-circle"></i> About us</a></li>
+            <li><a href="resources.html"><i class="fas fa-book-open"></i> Resources</a></li>
+            <li><a href="log-in-page.html"><i class="fas fa-user"></i> Login</a></li>
         </ul>
     </nav>
 
-
-
     </main>
-
-
-
-
-
-
-
-
-
 
 </body>
 
