--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,7 +4,6 @@
 
 
         <link rel="stylesheet" href="css/global.css">
-        <link rel="stylesheet" href="css/about-us.css">
         <link rel="stylesheet" href="css/leaderboard.css">
     
         <style>
@@ -89,7 +88,7 @@
                 <td>000</td>
             </tr>
             <tfoot>
-                <th colspan="3"><li><a href="#"></i>Back to Homepage</a></li></th>
+                <th colspan="3"><li><a href="index.html"></i>Back to Homepage</a></li></th>
             </tfoot>
         </table>
     </div>
