--- a/resources.html
+++ b/resources.html
@@ -10,8 +10,18 @@
 
 
     <body>
-        <div>
 
+        <div class="facts">
+            <h2> Facts and Resources About the Global Water Crisis</h2> 
+            <ul>
+                <li>1) The average cost for water supplied to a home in the U.S. is about $2.00 for 1,000 gallons, which equals about 5 gallons for a penny.</li>
+                <li>2) 3 in 10 people lack access to safely managed drinking water services and 6 in 10 people lack access to safely managed sanitation facilities.</li>
+                <li>3) Around the world, one million plastic drinking bottles are purchased every minute, while up to 5 trillion single-use plastic bags are used worldwide every year</li>
+                <li>4) Roughly 80per cent of marine and coastal pollution originates on land – including agricultural run-off, pesticides, plastics and untreated sewage.</li>
+                <li>5) More than 1 billion people still do not have access to fresh water.</li>
+                <li>6) Water is free from nature, but the infrastructure needed to deliver it is expensive.</li>
+            </ul>
+            <p>If you'd like to read more about the global water crisis<a href="https://www.un.org/sustainabledevelopment/water-and-sanitation/"> click here.</a> </p>
         </div>
 
         <nav>
@@ -25,6 +35,10 @@
                 <li><a href="log-in-page.html"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
+
+
+
+
 
     </body>
 
