--- a/about-us.html
+++ b/about-us.html
@@ -50,6 +50,7 @@
 
                 <tr>
                     <td>
+                        <h3>Hey, I'm Luka! I hope you enjoy our game and our webpage, and maybe learn something new while reading through our resources page! </h3>
                         <li><a href="#">click me</a></li>
                     </td>
                     <td>
