update ranking icon

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -40,7 +40,7 @@
 
             <thead>
                 <div class="img">
-                    <img src="images/ranking (1).png" width="100px" height="100px" ></div>
+                    <img src="Images/ranking.png" width="100px" height="100px" ></div>
                <h1>Top 10 Leaderboard</h1>
                 <th><h2>Username</h2></th>
                 <th><h2>Time Record</h2></th>
