--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -13,7 +13,7 @@
 
                 </header>
                 <div class="background-log-in">
-                    <h1>Sign In</h1>
+                    <h1>Sign Up</h1>
                     <h2>WELCOME HERE!</h2>
                     <div class="user-input">
                         <div><i class="fas fa-user-circle"></i></div>
@@ -39,13 +39,13 @@
         </main>
         <nav>
             <ul>
-             <li><a href="#"><i class="fas fa-home"></i> Homepage</a></li>
-             <li><a href="#"><i class="fas fa-gamepad"></i> Game</a></li>
-             <li><a href="#"><i class="fas fa-award"></i> Leader Board</a></li>
-             <li><a href="#"><i class="far fa-envelope"></i> Community</a></li>
-             <li><a href="#"><i class="fas fa-info-circle"></i> About us</a></li>
-             <li><a href="#"><i class="fas fa-book-open"></i> Resources</a></li>
-             <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
+             <li><a href="log-in-page.html"><i class="fas fa-home"></i> Homepage</a></li>
+             <li><a href="gamepage.html"><i class="fas fa-gamepad"></i> Game</a></li>
+             <li><a href="leaderboard.html"><i class="fas fa-award"></i> Leader Board</a></li>
+             <li><a href="community-page.html"><i class="far fa-envelope"></i> Community</a></li>
+             <li><a href="about-us.html"><i class="fas fa-info-circle"></i> About us</a></li>
+             <li><a href="resources.html"><i class="fas fa-book-open"></i> Resources</a></li>
+             <li><a href="log-in-page.html"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
     </body>
