--- a/community-page.html
+++ b/community-page.html
@@ -15,7 +15,16 @@
                 <div class=comment-text>
                    <div><input type="text"></div>
                 </div>
+                <div class=line>
+                    <hr>
+                </div>
+                <div class=feedback-box>
+                    <h2>Give us some feedback:</h2>
+                 <div><input type="text"></div>
+                </div>
             </div>
+
+    
         </main>
         <nav>
             <ul>
