add click me link

--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
                     </td>
                     <td>
                         <h3>Hi this is Agnes. One of web/game creators! Hope you can enjoy the game and explore new knowledge from this game. Click the link below to my profile website! See you there! </h3>
-                        <li><a href="#">click me</a></li>
+                        <li><a href="agnes.html">click me</a></li>
                     </td>
                     <td>
                         <li><a href="#">click me</a></li>
