add bryan intro

--- a/about-us.html
+++ b/about-us.html
@@ -58,6 +58,7 @@
                         <li><a href="agnes.html">click me</a></li>
                     </td>
                     <td>
+                        <h3>Hey there, I'm Bryan. I hope you have fun exploring through our website. We want to build a friendly and positive community and I hope you can be a part of that!</h3>
                         <li><a href="#">click me</a></li>
                     </td>
                 </tr>
