--- a/gamepage.html
+++ b/gamepage.html
@@ -20,7 +20,7 @@
         <h1>Lets Play!</h1>
         
         <div class="box">         
-            <iframe class="game" src="https://scratch.mit.edu/projects/557671628/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe> 
+           <div class="game"> <iframe src="https://scratch.mit.edu/projects/559916033/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
               <div class="paragraph">
                         <h2>
                             Use your arrow keys to direct the soap and defeat the bacteria. Collect points and try and beat the time records!
