add profile css

--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td>
                         <h3>Hey, I'm Luka! I hope you enjoy our game and our webpage, and maybe learn something new while reading through our resources page! </h3>
-                        <li><a href="#">click me</a></li>
+                        <li><a href="lukagoggins.html">click me</a></li>
                     </td>
                     <td>
                         <h3>Hi this is Agnes. One of web/game creators! Hope you can enjoy the game and explore new knowledge from this game. Click the link below to my profile website! See you there! </h3>
