--- a/agnes.html
+++ b/agnes.html
@@ -4,8 +4,8 @@
 <title>DSFA: Agnes Huang</title>
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-<link rel="stylesheet" href="../css/global.css">
-<link rel="stylesheet" href="../css/slider.css">
+<link rel="stylesheet" href="../Cleanwatergamepage/profile-css-copy/global.css">
+<link rel="stylesheet" href="../Cleanwatergamepage/profile-css-copy/slider.css">
 
 <script src="../js/jquery-3.5.1.min.js"></script>
 <script src="../js/global.js"></script>
