--- a/community-page.html
+++ b/community-page.html
@@ -10,21 +10,27 @@
 
     <body>
         <main>
-            <div class=comment-section-background>
-                <h3>Live comment section</h3>
-                <div class=comment-text>
-                   <div><input type="text"></div>
-                </div>
-                <div class=line>
-                    <hr>
-                </div>
-                <div class=feedback-box>
-                    <h2>Give us some feedback:</h2>
-                 <div><input type="text"></div>
+            <div class="pages">
+                <div class="community-page-grid">
+                    <div id="live-comment">
+                        <div class="community-blocks">
+                            <h3>Live comment section</h3>
+                            <input type="text">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="comment-title">
+                        <h4>Clean Water Game</h4>
+
+                    </div>
+                    <div class="comment-feedback">
+                        <div class="community-blocks">
+                            <h3>Give us some feedback:</h3>
+                            <input type="text">
+                        </div>
+                    </div>
                 </div>
             </div>
-
-    
         </main>
         <nav>
             <ul>
