--- a/agnes.html
+++ b/agnes.html
@@ -17,7 +17,7 @@
 <nav class="navbar">
     <div class="navbar-logo">
         <a href="http://computingforall.org" class="cfa-logo"></a>
-        <a href="http://dsfastudents.org/"><img src="../images/logo-color.png"></a>
+        <a href="http://dsfastudents.org/"><img src="../Cleanwatergamepage/profilepics/logo-color.png"></a>
     </div>
     <div>
         <div class="navbar-items">
@@ -30,11 +30,11 @@
 </nav>
 
 <!-- HERO -->
-<section class="hero profile-hero" style="background-image:url(../profiles/images/hero-agnes-background.jpeg);background-position: 50% 50%;"></section>
+<section class="hero profile-hero" style="background-image:url(./profilepics/hero-agnes-background.jpeg);background-position: 50% 50%;"></section>
     
 <section>
     <div class="container-txt profile-container">
-        <div class="profile-pic"><img src="images/pic-agnes.jpeg" alt="" /></div>
+        <div class="profile-pic"><img src="./profilepics/pic-agnes.jpeg" alt="" /></div>
         <div class="profile-body">
             <div class="profile-intro">
                 <h1>Agnes Huang</h1>
@@ -120,11 +120,11 @@
         <div class="grid-2by">
 <!-- SCRATCH GAME -->
             <div class="card">
-                <div class="card-img" style="background-image: url(../projects/images/agnes-gamepage.png);">
+                <div class="card-img" style="background-image: url(./profilepics/agnes-gamepage.png);">
                     <div class="contributors">
-                        <div><a href="agnes.html"><img src="images/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
-                        <div><a href="lukagoggins.html"><img src="../images/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
-                        <div><a href="bryanorihuela.html"><img src="../images/profile-pic-bryan.jpg" alt="" class="button-disc" /></a></div>
+                        <div><a href="agnes.html"><img src="./profilepics/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
+                        <div><a href="lukagoggins.html"><img src="./profilepics/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
+                        <div><a href="bryanorihuela.html"><img src="./profilepics/profile-pic-bryan.jpg" alt="" class="button-disc" /></a></div>
                     </div>
                 </div>
                 <div>
@@ -137,9 +137,9 @@
             <div class="card">
                 <div class="card-img" style="background-image: url(../projects/images/agnes-webpage.png);">
                     <div class="contributors">
-                        <div><a href="agnes.html"><img src="images/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
-                        <div><a href="lukagoggins.html"><img src="../images/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
-                        <div><a href="bryanorihuela.html"><img src="../images/profile-pic-bryan.jpg" alt="" class="button-disc" /></a></div>
+                        <div><a href="agnes.html"><img src="./profilepics/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
+                        <div><a href="lukagoggins.html"><img src="./profilepics/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
+                        <div><a href="bryanorihuela.html"><img src="./profilepics/profile-pic-bryan.jpg" alt="" class="button-disc" /></a></div>
                     </div>
                 </div>
                 <div>
