--- a/bryanorihuela.html
+++ b/bryanorihuela.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luka Goggins</title>
+<title>DSFA: Your Name</title>
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link rel="stylesheet" href="../Cleanwatergamepage/profile-css-copy/global.css">
@@ -30,15 +30,15 @@
 </nav>
 
 <!-- HERO -->
-<section class="hero profile-hero" style="background-image:url(../images/pic-lukagoggins-bg.jpg);background-position: 50% 50%;"></section>
+<section class="hero profile-hero" style="background-image:url(images/pic-yourname-bg.jpg);background-position: 50% 50%;"></section>
     
 <section>
     <div class="container-txt profile-container">
-        <div class="profile-pic"><img src="./profilepics/pic-lukagoggins.jpg" /></div>
+        <div class="profile-pic"><img src="./profilepics/bryan-pic.jpg" alt="" /></div>
         <div class="profile-body">
             <div class="profile-intro">
-                <h1>Luka Goggins</h1>
-                <p>Hi I'm Luka, I use any pronouns, I'm 17, and I have tourettes. I enrolled in CFA after i finished getting my GED to jumpstart my career in tech. I take pride in my orginazational skills and time management, aswell as my ability to overcome anxieties and work with others.</p>
+                <h1>Bryan Orihuela</h1>
+                <p>I'm the sauce, the gabagool, the essence of whats good in humanity</p>
             </div>
         </div>
     </div>
@@ -94,19 +94,19 @@
         <!--<p>Lorem Ipsum</p>-->
         <div class="grid-3by rtbs">
             <div class="rtb">
-                <div class="rtb-icon"><i class="fas fa-gamepad"></i></div>
-                <h2>Game Design</h2>
-                <p>I've been playing video games for as long as i can remember. When i was younger my dad would go on and on about all the games he would create if he had the skills and opportunity to, and since then i've wanted to see how far i can go with my ideas.</p>
-            </div>
-            <div class="rtb">
                 <div class="rtb-icon"><i class="fas fa-paint-brush"></i></div>
-                <h2>Graphic Design</h2>
-                <p>I'm very passionate about art and creating projects i can be proud of. I love making art and and music and adding beauty to the world in my own way. I view graphic design as a way to share with the world and make a difference in at least one persons life.</p>
+                <h2>Interest #1</h2>
+                <p>Description</p>
             </div>
             <div class="rtb">
                 <div class="rtb-icon"><i class="fas fa-code"></i></div>
-                <h2>Web Development</h2>
-                <p>I find the process behind building and updating websites very interesting, the coding, layouts, and getting to design a page that will be viewed by people outside your immediant social circle is super facinating and really inspiring. The impact a website can make on peoples lives is amazing, and I'd love to be part of that community.</p>
+                <h2>Interest #2</h2>
+                <p>Description</p>
+            </div>
+            <div class="rtb">
+                <div class="rtb-icon"><i class="fas fa-gamepad"></i></div>
+                <h2>Interest #3</h2>
+                <p>Description</p>
             </div>
         </div>
     </div>
@@ -122,20 +122,20 @@
             <div class="card">
                 <div class="card-img" style="background-image: url(./profilepics/agnes-gamepage.png);">
                     <div class="contributors">
-                        <div><a href="agnes.html"><img src="./profilepics/profilepicagnes.jpeg" alt="" class="button-disc" /></a></div>
+                        <<div><a href="agnes.html"><img src="./profilepics/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
                         <div><a href="lukagoggins.html"><img src="./profilepics/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
                         <div><a href="bryanorihuela.html"><img src="./profilepics/profile-pic-bryan.jpg" alt="" class="button-disc" /></a></div>
                     </div>
                 </div>
                 <div>
-                    <h2>Clean Water Game</h2>
-                    <p>Our game, Saving Water, is a topical game about global access to clean water and what you can do to help. In our game you direct a bar of soap to destroy the bacteria and progress through levels. Every 5 points you collect you are given a fact about the global water crisis and how it affects millions around the world. Eliminate bacteria and learn about the water crisis around the world. Point and click, earn points, learn facts while doing so.<br><span class="label">Programmed in Scratch</span></p>
+                    <h2>Project Title</h2>
+                    <p>Project Description<br><span class="label">Programmed in Scratch</span></p>
                 </div>
                 <div><a href="https://scratch.mit.edu/projects/557671628" target="_blank" class="button btn-blue">Play Game <span><i class="fas fa-arrow-right"></i></span></a></div>
             </div>
 <!-- WEBSITE -->
             <div class="card">
-                <div class="card-img" style="background-image: url(../projects/images/agnes-webpage.png);">
+                <div class="card-img" style="background-image: url(../projects/images/Template-thumbnail.jpg);">
                     <div class="contributors">
                         <div><a href="agnes.html"><img src="./profilepics/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
                         <div><a href="lukagoggins.html"><img src="./profilepics/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
@@ -143,8 +143,8 @@
                     </div>
                 </div>
                 <div>
-                    <h2>Saving Water</h2>
-                    <p>Our Website for Saving Water Game! It include many funtions like leaderboard, about-us, log-in and sign-up pages! <br><span class="label">Programmed in HTML / CSS</span></p>
+                    <h2>Project Title</h2>
+                    <p>Project Description<br><span class="label">Programmed in HTML / CSS</span></p>
                 </div>
                 <div><a href="https://lagoggins126.github.io/Cleanwatergamepage/" target="_blank" class="button btn-blue">View Website <span><i class="fas fa-arrow-right"></i></span></a></div>
             </div>
