--- a/bryanorihuela.html
+++ b/bryanorihuela.html
@@ -135,7 +135,7 @@
             </div>
 <!-- WEBSITE -->
             <div class="card">
-                <div class="card-img" style="background-image: url(../projects/images/Template-thumbnail.jpg);">
+                <div class="card-img" style="background-image: url(./profilepics/agnes-webpage.png);">
                     <div class="contributors">
                         <div><a href="agnes.html"><img src="./profilepics/pic-agnes.jpeg" alt="" class="button-disc" /></a></div>
                         <div><a href="lukagoggins.html"><img src="./profilepics/pic-lukagoggins.jpg" alt="" class="button-disc" /></a></div>
