--- a/community-page.html
+++ b/community-page.html
@@ -26,7 +26,7 @@
                     <div class="comment-feedback">
                         <div class="community-blocks">
                             <h3>Give us some feedback:</h3>
-                            <input type="text">
+                            <input type="text" style="height: 240px;">
                         </div>
                     </div>
                 </div>
